--- a/Spirograph/styles/app.less
+++ b/Spirograph/styles/app.less
@@ -1,4 +1,8 @@
-﻿
-.spirograph {
+﻿.spirograph {
+    .gear {
+        fill: black;
+        fill-opacity: 0.05;
+        stroke: #2b2b2b;
+    }
  
  }
