added more gears

--- a/Spirograph/styles/app.css
+++ b/Spirograph/styles/app.css
@@ -4,4 +4,14 @@
   stroke: #2b2b2b;
   fill-rule: evenodd;
 }
+.spirograph #output {
+  position: absolute;
+  z-index: -10;
+  color: gray;
+  margin: 20px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
 /*# sourceMappingURL=app.css.map */
