--- a/Spirograph/styles/app.less
+++ b/Spirograph/styles/app.less
@@ -5,4 +5,16 @@
         stroke: #2b2b2b;
         fill-rule: evenodd;
     }
+
+    #output {
+        position: absolute;
+        z-index: -10;
+        color: gray;
+        margin: 20px;
+
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+    }
 }
