--- a/Spirograph/styles/app.less
+++ b/Spirograph/styles/app.less
@@ -11,10 +11,13 @@
         z-index: -10;
         color: gray;
         margin: 20px;
-
         -webkit-user-select: none;
         -moz-user-select: none;
         -ms-user-select: none;
         user-select: none;
+    }
+
+    svg, canvas {
+        position: absolute;
     }
 }
