--- a/Spirograph/styles/app.css
+++ b/Spirograph/styles/app.css
@@ -4,6 +4,20 @@
   stroke: #2b2b2b;
   fill-rule: evenodd;
 }
+.spirograph .gear .gear-hole {
+  fill: transparent;
+  stroke: transparent;
+  stroke-width: 3px;
+  fill-opacity: 1;
+}
+.spirograph .gear .gear-hole:hover {
+  /*fill: red;*/
+  stroke: #3e3e3e;
+}
+.spirograph .gear.dragging .gear-hole:hover {
+  fill: transparent;
+  stroke: transparent;
+}
 .spirograph #output {
   position: absolute;
   z-index: -10;
@@ -31,18 +45,11 @@
 .spirograph a:link,
 .spirograph a:visited {
   text-decoration: none;
-  color: #d3d3d3;
+  color: lightgray;
 }
 .spirograph a:hover,
 .spirograph a:active {
   text-decoration: none;
   color: gray;
-}
-.spirograph .testing {
-  fill: transparent;
-  stroke: red;
-}
-.spirograph .testing:hover {
-  fill: blue;
 }
 /*# sourceMappingURL=app.css.map */
