--- a/Spirograph/styles/app.less
+++ b/Spirograph/styles/app.less
@@ -5,6 +5,10 @@
         stroke: #2b2b2b;
         fill-rule: evenodd;
 
+        &.fixed {
+            fill-opacity: 0.2;
+        }
+
         .gear-hole {
             fill: transparent;
             stroke: transparent;
