--- a/Spirograph/styles/app.less
+++ b/Spirograph/styles/app.less
@@ -1,4 +1,8 @@
-﻿.spirograph {
+﻿@import "base.less";
+@import "gear-options-selector.less";
+@import "color-selector.less";
+
+.spirograph {
     .gear {
         fill: black;
         fill-opacity: 0.1;
