gear selection UI started

--- a/Spirograph/styles/app.less
+++ b/Spirograph/styles/app.less
@@ -1,6 +1,7 @@
 ﻿@import "base.less";
 @import "gear-options-selector.less";
 @import "color-selector.less";
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);
 
 .spirograph {
     .gear {
