--- a/Spirograph/styles/gear-options-selector.less
+++ b/Spirograph/styles/gear-options-selector.less
@@ -1,8 +1,77 @@
-﻿.gear-options-selector {
+﻿#gear-options-selector {
     position: absolute;
-    left: 50px;
+    left: 25px;
     top: 5%;
     height: 90%;
-    width: 50px;
-    background: red;
+    width: 70px;
+    z-index: 10;
+
+    .fixed-container {
+        position: absolute;
+        width: 50%;
+        height: 100%;
+
+        > p {
+            margin-left: -5px;
+        }
+    }
+
+    .rotating-container {
+        position: absolute;
+        width: 50%;
+        height: 100%;
+        right: 0;
+
+        > p {
+            margin-left: 10px;
+        }
+    }
+
+    .fixed-container, .rotating-container {
+        -moz-user-select: none;
+        -ms-user-select: none;
+        -webkit-user-select: none;
+        user-select: none;
+
+        .gear-container {
+            height: 35px;
+            width: 35px;
+
+            .gear-label {
+                width: 100%;
+                height: 100%;
+                text-align: center;
+                margin-top: 6px;
+                position: absolute;
+                font-size: 15px;
+                font-weight: bold;
+                opacity: 0;
+            }
+
+            &:hover {
+                cursor: pointer;
+
+                .gear-label {
+                    opacity: 1;
+                }
+
+                .gear {
+                    fill-opacity: 0.1;
+                    stroke-opacity: 0.2;
+                }
+            }
+
+            &.selected {
+                .gear-label {
+                    opacity: 1;
+                }
+
+                .gear {
+                    fill: green;
+                    fill-opacity: 0.5;
+                    stroke-opacity: 0.2;
+                }
+            }
+        }
+    }
 }
