--- a/Spirograph/styles/app.css
+++ b/Spirograph/styles/app.css
@@ -44,11 +44,11 @@ body {
   width: 100%;
   height: 100%;
   text-align: center;
-  margin-top: 6px;
+  margin-top: -1px;
   position: absolute;
-  font-size: 15px;
+  font-size: 25px;
   font-weight: bold;
-  opacity: 0;
+  display: none;
 }
 #gear-options-selector .fixed-container .gear-container:hover,
 #gear-options-selector .rotating-container .gear-container:hover {
@@ -56,7 +56,8 @@ body {
 }
 #gear-options-selector .fixed-container .gear-container:hover .gear-label,
 #gear-options-selector .rotating-container .gear-container:hover .gear-label {
-  opacity: 1;
+  display: inline;
+  color: #555;
 }
 #gear-options-selector .fixed-container .gear-container:hover .gear,
 #gear-options-selector .rotating-container .gear-container:hover .gear {
@@ -65,12 +66,13 @@ body {
 }
 #gear-options-selector .fixed-container .gear-container.selected .gear-label,
 #gear-options-selector .rotating-container .gear-container.selected .gear-label {
-  opacity: 1;
+  display: inline;
+  color: black;
 }
 #gear-options-selector .fixed-container .gear-container.selected .gear,
 #gear-options-selector .rotating-container .gear-container.selected .gear {
-  fill: green;
-  fill-opacity: 0.5;
+  fill: #5cb85c;
+  fill-opacity: 0.6;
   stroke-opacity: 0.2;
 }
 #color-selector {
@@ -79,7 +81,6 @@ body {
   top: 5%;
   height: 90%;
   width: 50px;
-  background: blue;
 }
 .spirograph .gear {
   fill: black;
