--- a/Spirograph/styles/app.css
+++ b/Spirograph/styles/app.css
@@ -77,10 +77,50 @@ body {
 }
 #color-selector {
   position: absolute;
-  right: 50px;
+  right: 25px;
   top: 5%;
   height: 90%;
-  width: 50px;
+  width: 70px;
+  z-index: 10;
+}
+#color-selector .foreground-container {
+  position: absolute;
+  width: 50%;
+  height: 100%;
+}
+#color-selector .background-container {
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  right: 0;
+}
+#color-selector .foreground-container .color-container,
+#color-selector .background-container .color-container {
+  height: 35px;
+  width: 35px;
+  padding: 3px;
+}
+#color-selector .foreground-container .color-container .color,
+#color-selector .background-container .color-container .color {
+  width: 100%;
+  height: 100%;
+}
+#color-selector .foreground-container .color-container:hover,
+#color-selector .background-container .color-container:hover {
+  cursor: pointer;
+  border: 3px solid gray;
+}
+#color-selector .foreground-container .color-container:hover .color,
+#color-selector .background-container .color-container:hover .color {
+  border: 3px solid white;
+}
+#color-selector .foreground-container .color-container.selected,
+#color-selector .background-container .color-container.selected {
+  border: 3px solid #555;
+}
+#color-selector .foreground-container .color-container.selected .color,
+#color-selector .background-container .color-container.selected .color {
+  border: 3px solid white;
 }
 .spirograph .gear {
   fill: black;
