--- a/Spirograph/styles/color-selector.less
+++ b/Spirograph/styles/color-selector.less
@@ -1,8 +1,52 @@
 ﻿#color-selector {
     position: absolute;
-    right: 50px;
+    right: 25px;
     top: 5%;
     height: 90%;
-    width: 50px;
-}
+    width: 70px;
+    z-index: 10;
 
+    .foreground-container {
+        position: absolute;
+        width: 50%;
+        height: 100%;
+    }
+
+    .background-container {
+        position: absolute;
+        width: 50%;
+        height: 100%;
+        right: 0;
+    }
+
+    .foreground-container, .background-container {
+
+        .color-container {
+            height: 35px;
+            width: 35px;
+            padding: 3px;
+
+            .color {
+                width: 100%;
+                height: 100%;
+            }
+
+            &:hover {
+                cursor: pointer;
+                border: 3px solid gray;
+
+                .color {
+                    border: 2px solid white;
+                }
+            }
+
+            &.selected {
+                border: 3px solid #555;
+
+                .color {
+                    border: 3px solid white;
+                }
+            }
+        }
+    }
+}
