--- a/Spirograph/styles/gear-options-selector.less
+++ b/Spirograph/styles/gear-options-selector.less
@@ -54,6 +54,10 @@
                 .gear-label {
                     display: inline;
                     color: #555;
+
+                    &.dark {
+                        color: #CCC;
+                    }
                 }
 
                 .gear {
@@ -66,6 +70,10 @@
                 .gear-label {
                     display: inline;
                     color: black;
+
+                    &.dark {
+                        color: #FFF;
+                    }
                 }
 
                 .gear {
