--- a/Spirograph/styles/app.less
+++ b/Spirograph/styles/app.less
@@ -4,14 +4,30 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);
 
 .spirograph {
+
+    .dark {
+        color: lightgray;
+    }
+
     .gear {
         fill: black;
-        fill-opacity: 0.1;
+        fill-opacity: 0.2;
         stroke: #2b2b2b;
         fill-rule: evenodd;
 
+        &.dark {
+            stroke: #d5d5d5;
+            fill-rule: evenodd;
+            fill: white;
+            fill-opacity: .3;
+        }
+
         &.fixed {
-            fill-opacity: 0.2;
+            fill-opacity: 0.3;
+
+            &.dark {
+                fill-opacity: 0.5;
+            }
         }
 
         .gear-hole {
