--- a/Spirograph/styles/color-selector.css
+++ b/Spirograph/styles/color-selector.css
@@ -1,4 +1,4 @@
-#color-selector {
+﻿#color-selector {
   position: absolute;
   right: 25px;
   top: 5%;
@@ -28,6 +28,10 @@
   width: 100%;
   height: 100%;
 }
+#color-selector .foreground-container .color-container .color.bordered,
+#color-selector .background-container .color-container .color.bordered {
+  border: 2px solid gray;
+}
 #color-selector .foreground-container .color-container:hover,
 #color-selector .background-container .color-container:hover {
   cursor: pointer;
@@ -36,6 +40,10 @@
 #color-selector .foreground-container .color-container:hover .color,
 #color-selector .background-container .color-container:hover .color {
   border: 2px solid white;
+}
+#color-selector .foreground-container .color-container:hover .color.bordered,
+#color-selector .background-container .color-container:hover .color.bordered {
+  border: 2px solid gray;
 }
 #color-selector .foreground-container .color-container.selected,
 #color-selector .background-container .color-container.selected {
