--- a/Spirograph/styles/color-selector.less
+++ b/Spirograph/styles/color-selector.less
@@ -29,6 +29,10 @@
             .color {
                 width: 100%;
                 height: 100%;
+
+                &.bordered {
+                    border: 2px solid gray;
+                }
             }
 
             &:hover {
@@ -37,6 +41,10 @@
 
                 .color {
                     border: 2px solid white;
+
+                    &.bordered {
+                        border: 2px solid gray;
+                    }
                 }
             }
 
