fixed it for real this time.

--- a/Spirograph/styles/app.less
+++ b/Spirograph/styles/app.less
@@ -2,8 +2,8 @@
 @import "gear-options-selector.less";
 @import "color-selector.less";
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);
-@import (css) '../bower_components/bootstrap/dist/css/bootstrap.min.css';
-/*@import (css) '../bower_components/fontawesome/css/font-awesome.css';*/
+@import (less) '../bower_components/bootstrap/dist/css/bootstrap.min.css';
+/*@import (less) '../bower_components/fontawesome/css/font-awesome.css';*/
 
 .spirograph {
 
