changed global box sizing

--- a/Spirograph/styles/app.css
+++ b/Spirograph/styles/app.css
@@ -1,5 +1,11 @@
 ﻿@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);
-@import '../bower_components/bootstrap/dist/css/bootstrap.min.css';
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
 body {
   font-family: 'Open Sans', sans-serif;
   overflow: hidden;
@@ -140,7 +146,8 @@ body {
 #color-selector .background-container .color-container.selected .color {
   border: 3px solid white;
 }
-/*@import (css) '../bower_components/fontawesome/css/font-awesome.css';*/
+/*@import (less) '../bower_components/bootstrap/dist/css/bootstrap.min.css';*/
+/*@import (less) '../bower_components/fontawesome/css/font-awesome.css';*/
 .spirograph .dark {
   color: lightgray;
 }
