--- a/Spirograph/styles/base.css
+++ b/Spirograph/styles/base.css
@@ -1,4 +1,11 @@
-﻿body {
+﻿*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+body {
   font-family: 'Open Sans', sans-serif;
   overflow: hidden;
 }
