--- a/Spirograph/styles/gear-options-selector.less
+++ b/Spirograph/styles/gear-options-selector.less
@@ -37,6 +37,10 @@
             height: 35px;
             width: 35px;
 
+            svg {
+                position: absolute;
+            }
+
             .gear-label {
                 width: 100%;
                 height: 100%;
