--- a/Spirograph/styles/base.less
+++ b/Spirograph/styles/base.less
@@ -10,6 +10,8 @@
 @gray-light: lighten(#000, 46.7%); // #777
 @gray-lighter: lighten(#000, 93.5%); // #eee
 
+@toolbar-background: rgba(128, 128, 128, .3);
+
 *, *:before, *:after {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
