--- a/Spirograph/styles/color-selector.less
+++ b/Spirograph/styles/color-selector.less
@@ -1,10 +1,12 @@
 ﻿#color-selector {
     position: absolute;
-    right: 25px;
-    top: 5%;
-    height: 90%;
-    width: 70px;
+    right: 0;
+    top: 0;
+    height: 100%;
+    width: 80px;
     z-index: 10;
+    background-color: @toolbar-background;
+    padding-right: 5px;
 
     .foreground-container {
         position: absolute;
@@ -20,8 +22,33 @@
     }
 
     .foreground-container, .background-container {
+        -moz-user-select: none;
+        -ms-user-select: none;
+        -webkit-user-select: none;
+        user-select: none;
+        padding-top: 108px;
+        margin-left: 3px;
+
+        .selector-header {
+            position: absolute;
+            margin-right: 21px;
+            margin-top: -20px;
+            -moz-transform: rotate(90deg) translate3d(0, 0, 0);
+            -ms-transform: rotate(90deg) translate3d(0, 0, 0);
+            -o-transform: rotate(90deg) translate3d(0, 0, 0);
+            -webkit-transform: rotate(90deg) translate3d(0, 0, 0);
+            transform: rotate(90deg) translate3d(0, 0, 0);
+            -moz-transform-origin: 100% 50%;
+            -ms-transform-origin: 100% 50%;
+            -o-transform-origin: 100% 50%;
+            -webkit-transform-origin: 100% 50%;
+            transform-origin: 100% 50%;
+            text-align: right;
+            right: 0;
+        }
 
         .color-container {
+            z-index: 10;
             height: 35px;
             width: 35px;
             padding: 3px;
