--- a/Spirograph/styles/gear-options-selector.less
+++ b/Spirograph/styles/gear-options-selector.less
@@ -1,10 +1,12 @@
 ﻿#gear-options-selector {
     position: absolute;
-    left: 25px;
-    top: 5%;
-    height: 90%;
-    width: 70px;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 80px;
     z-index: 10;
+    background: @toolbar-background;
+    padding-left: 5px;
 
     .fixed-container {
         position: absolute;
@@ -32,8 +34,26 @@
         -ms-user-select: none;
         -webkit-user-select: none;
         user-select: none;
+        padding-top: 108px;
+
+        .selector-header {
+            position: absolute;
+            margin-left: 16px;
+            margin-top: -20px;
+            -moz-transform: rotate(-90deg) translate3d(0, 0, 0);
+            -ms-transform: rotate(-90deg) translate3d(0, 0, 0);
+            -o-transform: rotate(-90deg) translate3d(0, 0, 0);
+            -webkit-transform: rotate(-90deg) translate3d(0, 0, 0);
+            transform: rotate(-90deg) translate3d(0, 0, 0);
+            -moz-transform-origin: 0 50%;
+            -ms-transform-origin: 0 50%;
+            -o-transform-origin: 0 50%;
+            -webkit-transform-origin: 0 50%;
+            transform-origin: 0 50%;
+        }
 
         .gear-container {
+            z-index: 10;
             height: 35px;
             width: 35px;
 
@@ -46,6 +66,7 @@
                 height: 100%;
                 text-align: center;
                 margin-top: -1px;
+                margin-left: -3px;
                 position: absolute;
                 font-size: 25px;
                 font-weight: bold;
