--- a/Spirograph/styles/color-selector.css
+++ b/Spirograph/styles/color-selector.css
@@ -1,56 +1,93 @@
-﻿#color-selector {
-  position: absolute;
-  right: 25px;
-  top: 5%;
-  height: 90%;
-  width: 70px;
-  z-index: 10;
-}
-#color-selector .foreground-container {
-  position: absolute;
-  width: 50%;
-  height: 100%;
-}
-#color-selector .background-container {
-  position: absolute;
-  width: 50%;
-  height: 100%;
-  right: 0;
-}
-#color-selector .foreground-container .color-container,
-#color-selector .background-container .color-container {
-  height: 35px;
-  width: 35px;
-  padding: 3px;
-}
-#color-selector .foreground-container .color-container .color,
-#color-selector .background-container .color-container .color {
-  width: 100%;
-  height: 100%;
-}
-#color-selector .foreground-container .color-container .color.bordered,
-#color-selector .background-container .color-container .color.bordered {
-  border: 2px solid gray;
-}
-#color-selector .foreground-container .color-container:hover,
-#color-selector .background-container .color-container:hover {
-  cursor: pointer;
-  border: 3px solid gray;
-}
-#color-selector .foreground-container .color-container:hover .color,
-#color-selector .background-container .color-container:hover .color {
-  border: 2px solid white;
-}
-#color-selector .foreground-container .color-container:hover .color.bordered,
-#color-selector .background-container .color-container:hover .color.bordered {
-  border: 2px solid gray;
-}
-#color-selector .foreground-container .color-container.selected,
-#color-selector .background-container .color-container.selected {
-  border: 3px solid #555;
-}
-#color-selector .foreground-container .color-container.selected .color,
-#color-selector .background-container .color-container.selected .color {
-  border: 3px solid white;
-}
+﻿/*#color-selector {
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 100%;
+    width: 80px;
+    z-index: 10;
+    background-color: @toolbar-background;
+    padding-right: 5px;
+
+    .foreground-container {
+        position: absolute;
+        width: 50%;
+        height: 100%;
+    }
+
+    .background-container {
+        position: absolute;
+        width: 50%;
+        height: 100%;
+        right: 0;
+    }
+
+    .foreground-container, .background-container {
+        -moz-user-select: none;
+        -ms-user-select: none;
+        -webkit-user-select: none;
+        user-select: none;
+        padding-top: 108px;
+        margin-left: 3px;
+
+        .selector-header {
+            position: absolute;
+            margin-right: 21px;
+            margin-top: -20px;
+            -moz-transform: rotate(90deg) translate3d(0, 0, 0);
+            -ms-transform: rotate(90deg) translate3d(0, 0, 0);
+            -o-transform: rotate(90deg) translate3d(0, 0, 0);
+            -webkit-transform: rotate(90deg) translate3d(0, 0, 0);
+            transform: rotate(90deg) translate3d(0, 0, 0);
+            -moz-transform-origin: 100% 50%;
+            -ms-transform-origin: 100% 50%;
+            -o-transform-origin: 100% 50%;
+            -webkit-transform-origin: 100% 50%;
+            transform-origin: 100% 50%;
+            text-align: right;
+            right: 0;
+        }
+
+        .scroll-container {
+            height: 100%;
+            overflow: scroll;
+
+            .color-container {
+                z-index: 10;
+                height: 35px;
+                width: 35px;
+                padding: 3px;
+
+                .color {
+                    width: 100%;
+                    height: 100%;
+
+                    &.bordered {
+                        border: 2px solid gray;
+                    }
+                }
+
+                &:hover {
+                    cursor: pointer;
+                    border: 3px solid gray;
+
+                    .color {
+                        border: 2px solid white;
+
+                        &.bordered {
+                            border: 2px solid gray;
+                        }
+                    }
+                }
+
+                &.selected {
+                    border: 3px solid #555;
+
+                    .color {
+                        border: 3px solid white;
+                    }
+                }
+            }
+        }
+    }
+}*/
 /*# sourceMappingURL=color-selector.css.map */
