--- a/Spirograph/styles/color-selector.less
+++ b/Spirograph/styles/color-selector.less
@@ -47,39 +47,44 @@
             right: 0;
         }
 
-        .color-container {
-            z-index: 10;
-            height: 35px;
-            width: 35px;
-            padding: 3px;
+        .scroll-container {
+            height: 100%;
+            overflow: scroll;
 
-            .color {
-                width: 100%;
-                height: 100%;
-
-                &.bordered {
-                    border: 2px solid gray;
-                }
-            }
-
-            &:hover {
-                cursor: pointer;
-                border: 3px solid gray;
+            .color-container {
+                z-index: 10;
+                height: 35px;
+                width: 35px;
+                padding: 3px;
 
                 .color {
-                    border: 2px solid white;
+                    width: 100%;
+                    height: 100%;
 
                     &.bordered {
                         border: 2px solid gray;
                     }
                 }
-            }
 
-            &.selected {
-                border: 3px solid #555;
+                &:hover {
+                    cursor: pointer;
+                    border: 3px solid gray;
 
-                .color {
-                    border: 3px solid white;
+                    .color {
+                        border: 2px solid transparent;
+
+                        &.bordered {
+                            border: 2px solid gray;
+                        }
+                    }
+                }
+
+                &.selected {
+                    border: 3px solid #555;
+
+                    .color {
+                        border: 3px solid transparent;
+                    }
                 }
             }
         }
