--- a/Spirograph/styles/gear-options-selector.css
+++ b/Spirograph/styles/gear-options-selector.css
@@ -1,72 +1,119 @@
-﻿#gear-options-selector {
-  position: absolute;
-  left: 25px;
-  top: 5%;
-  height: 90%;
-  width: 70px;
-  z-index: 10;
-}
-#gear-options-selector .fixed-container {
-  position: absolute;
-  width: 50%;
-  height: 100%;
-}
-#gear-options-selector .fixed-container > p {
-  margin-left: -5px;
-}
-#gear-options-selector .rotating-container {
-  position: absolute;
-  width: 50%;
-  height: 100%;
-  right: 0;
-}
-#gear-options-selector .rotating-container > p {
-  margin-left: 10px;
-}
-#gear-options-selector .fixed-container,
-#gear-options-selector .rotating-container {
-  -moz-user-select: none;
-  -ms-user-select: none;
-  -webkit-user-select: none;
-  user-select: none;
-}
-#gear-options-selector .fixed-container .gear-container,
-#gear-options-selector .rotating-container .gear-container {
-  height: 35px;
-  width: 35px;
-}
-#gear-options-selector .fixed-container .gear-container .gear-label,
-#gear-options-selector .rotating-container .gear-container .gear-label {
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  margin-top: 6px;
-  position: absolute;
-  font-size: 15px;
-  font-weight: bold;
-  opacity: 0;
-}
-#gear-options-selector .fixed-container .gear-container:hover,
-#gear-options-selector .rotating-container .gear-container:hover {
-  cursor: pointer;
-}
-#gear-options-selector .fixed-container .gear-container:hover .gear-label,
-#gear-options-selector .rotating-container .gear-container:hover .gear-label {
-  opacity: 1;
-}
-#gear-options-selector .fixed-container .gear-container:hover .gear,
-#gear-options-selector .rotating-container .gear-container:hover .gear {
-  fill-opacity: 0.1;
-  stroke-opacity: 0.2;
-}
-#gear-options-selector .fixed-container .gear-container.selected .gear-label,
-#gear-options-selector .rotating-container .gear-container.selected .gear-label {
-  opacity: 1;
-}
-#gear-options-selector .fixed-container .gear-container.selected .gear,
-#gear-options-selector .rotating-container .gear-container.selected .gear {
-  fill: green;
-  fill-opacity: 0.5;
-  stroke-opacity: 0.2;
-}
+﻿/*#gear-options-selector {
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 80px;
+    z-index: 10;
+    background: @toolbar-background;
+    padding-left: 5px;
+
+    .fixed-container {
+        position: absolute;
+        width: 50%;
+        height: 100%;
+
+        > p {
+            margin-left: -5px;
+        }
+    }
+
+    .rotating-container {
+        position: absolute;
+        width: 50%;
+        height: 100%;
+        right: 0;
+
+        > p {
+            margin-left: 10px;
+        }
+    }
+
+    .fixed-container, .rotating-container {
+        -moz-user-select: none;
+        -ms-user-select: none;
+        -webkit-user-select: none;
+        user-select: none;
+        padding-top: 108px;
+
+        .selector-header {
+            position: absolute;
+            margin-left: 16px;
+            margin-top: -20px;
+            -moz-transform: rotate(-90deg) translate3d(0, 0, 0);
+            -ms-transform: rotate(-90deg) translate3d(0, 0, 0);
+            -o-transform: rotate(-90deg) translate3d(0, 0, 0);
+            -webkit-transform: rotate(-90deg) translate3d(0, 0, 0);
+            transform: rotate(-90deg) translate3d(0, 0, 0);
+            -moz-transform-origin: 0 50%;
+            -ms-transform-origin: 0 50%;
+            -o-transform-origin: 0 50%;
+            -webkit-transform-origin: 0 50%;
+            transform-origin: 0 50%;
+        }
+
+        .scroll-container {
+            height: 100%;
+            overflow: scroll;
+
+            .gear-container {
+                z-index: 10;
+                height: 35px;
+                width: 35px;
+                position: relative;
+
+                svg {
+                    position: absolute;
+                }
+
+                .gear-label {
+                    width: 100%;
+                    height: 100%;
+                    text-align: center;
+                    margin-top: -1px;
+                    margin-left: -3px;
+                    position: absolute;
+                    font-size: 25px;
+                    font-weight: bold;
+                    display: none;
+                }
+
+                &:hover {
+                    cursor: pointer;
+
+                    .gear-label {
+                        display: inline;
+                        color: #555;
+
+                        &.dark {
+                            color: #CCC;
+                        }
+                    }
+
+                    .gear {
+                        fill-opacity: 0.1;
+                        stroke-opacity: 0.2;
+                    }
+                }
+
+                &.selected {
+                    .gear-label {
+                        display: inline;
+                        color: black;
+
+                        &.dark {
+                            color: #FFF;
+                        }
+                    }
+
+                    .gear {
+                        fill: @brand-success;
+                        fill-opacity: 0.6;
+                        stroke-opacity: 0.2;
+                    }
+                }
+            }
+        }
+    }
+}*/
 /*# sourceMappingURL=gear-options-selector.css.map */
