gear-selector close to being done

--- a/Spirograph/styles/gear-options-selector.less
+++ b/Spirograph/styles/gear-options-selector.less
@@ -75,6 +75,11 @@
                     font-size: 25px;
                     font-weight: bold;
                     display: none;
+
+                    &.small-label {
+                        font-size: 20px;
+                        margin-top: 3px;
+                    }
                 }
 
                 &:hover {
