--- a/Spirograph/styles/jsscrollpane-modifications.css
+++ b/Spirograph/styles/jsscrollpane-modifications.css
@@ -1,23 +1,4 @@
-﻿.scroll-container {
-  /*&.scrollbar-left {
-        .jspContainer {
-            .jspPane {
-                margin-left: 0 !important;
-            }
-
-            .jspVerticalBar {
-                left: 0;
-
-                .jspDrag {
-                    border-left: 2px solid rgba(128, 128, 128, .5);
-                    border-right: none;
-                    margin-left: 2px;
-                }
-            }
-        }
-    }*/
-}
-.scroll-container .jspVerticalBar {
+﻿.scroll-container .jspVerticalBar {
   background: transparent;
 }
 .scroll-container .jspVerticalBar .jspTrack {
@@ -27,5 +8,8 @@
   background: transparent;
   border-right: 2px solid rgba(128, 128, 128, 0.5);
   margin-right: 4px;
+}
+.scroll-container.invisible-scrollbar .jspVerticalBar .jspTrack .jspDrag {
+  border: none;
 }
 /*# sourceMappingURL=jsscrollpane-modifications.css.map */
