--- a/Spirograph/styles/jsscrollpane-modifications.less
+++ b/Spirograph/styles/jsscrollpane-modifications.less
@@ -13,21 +13,13 @@
         }
     }
 
-    /*&.scrollbar-left {
-        .jspContainer {
-            .jspPane {
-                margin-left: 0 !important;
-            }
-
-            .jspVerticalBar {
-                left: 0;
-
+    &.invisible-scrollbar {
+        .jspVerticalBar {
+            .jspTrack {
                 .jspDrag {
-                    border-left: 2px solid rgba(128, 128, 128, .5);
-                    border-right: none;
-                    margin-left: 2px;
+                    border: none;
                 }
             }
         }
-    }*/
+    }
 }
