--- a/Spirograph/styles/app.css
+++ b/Spirograph/styles/app.css
@@ -88,6 +88,11 @@ body {
   font-weight: bold;
   display: none;
 }
+#gear-options-selector .fixed-container .scroll-container .gear-container .gear-label.small-label,
+#gear-options-selector .rotating-container .scroll-container .gear-container .gear-label.small-label {
+  font-size: 20px;
+  margin-top: 3px;
+}
 #gear-options-selector .fixed-container .scroll-container .gear-container:hover,
 #gear-options-selector .rotating-container .scroll-container .gear-container:hover {
   cursor: pointer;
@@ -211,25 +216,6 @@ body {
 #color-selector .background-container .scroll-container .color-container.selected .color {
   border: 3px solid transparent;
 }
-.scroll-container {
-  /*&.scrollbar-left {
-        .jspContainer {
-            .jspPane {
-                margin-left: 0 !important;
-            }
-
-            .jspVerticalBar {
-                left: 0;
-
-                .jspDrag {
-                    border-left: 2px solid rgba(128, 128, 128, .5);
-                    border-right: none;
-                    margin-left: 2px;
-                }
-            }
-        }
-    }*/
-}
 .scroll-container .jspVerticalBar {
   background: transparent;
 }
@@ -240,6 +226,9 @@ body {
   background: transparent;
   border-right: 2px solid rgba(128, 128, 128, 0.5);
   margin-right: 4px;
+}
+.scroll-container.invisible-scrollbar .jspVerticalBar .jspTrack .jspDrag {
+  border: none;
 }
 /*
  * CSS Styles that are needed by jScrollPane for it to operate correctly.
